--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@ionic-native/app-preferences": "^4.5.3",
     "@ionic-native/barcode-scanner": "^4.5.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/dialogs": "^4.6.0",
     "@ionic-native/http": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "angular-barcode-listener": "^1.5.2",
+    "cordova-android": "~7.0.0",
     "cordova-plugin-advanced-http": "^1.11.0",
     "cordova-plugin-app-preferences": "^0.99.3",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -42,8 +46,7 @@
     "phonegap-plugin-barcodescanner": "^7.0.2",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~7.0.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
@@ -60,7 +63,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "phonegap-plugin-barcodescanner": {},
       "cordova-plugin-app-preferences": {},
-      "cordova-plugin-advanced-http": {}
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-dialogs": {}
     },
     "platforms": [
       "android"
