--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic": "^3.15.0",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
     "phonegap-plugin-barcodescanner": "^7.0.2",
