--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/app-preferences": "^4.5.3",
     "@ionic-native/barcode-scanner": "^4.5.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/dialogs": "^4.6.0",
@@ -28,9 +27,9 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "angular-barcode-listener": "^1.5.2",
     "cordova-android": "~7.0.0",
-    "cordova-plugin-advanced-http": "^1.11.0",
+    "cordova-android-support-gradle-release": "^1.4.4",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
@@ -40,7 +39,6 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic": "^3.15.0",
     "ionic-angular": "3.9.2",
-    "ionic-plugin-keyboard": "^2.2.1",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
     "phonegap-plugin-barcodescanner": "^7.0.2",
@@ -50,20 +48,24 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "ionic": "3.20.0",
+    "@ionic/cli-plugin-cordova": "1.6.2",
+    "ionic": "4.0.1",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-whitelist": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
