--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/http": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/vibration": "^4.11.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "~7.0.0",
     "cordova-android-support-gradle-release": "^1.4.4",
@@ -36,6 +37,7 @@
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-vibration": "^3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic": "^3.15.0",
     "ionic-angular": "3.9.2",
@@ -65,7 +67,8 @@
       "cordova-plugin-advanced-http": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "android"
