--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic-native/vibration": "^4.11.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "~7.0.0",
     "cordova-android-support-gradle-release": "^1.4.4",
     "cordova-browser": "~5.0.4",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -37,8 +36,6 @@
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-file-transfer": "^1.7.1",
-    "cordova-plugin-ionic": "^5.2.4",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -51,7 +48,8 @@
     "phonegap-plugin-barcodescanner": "^7.0.2",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-android": "~7.0.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
@@ -76,19 +74,11 @@
       "cordova-plugin-email-composer": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-ionic": {
-        "APP_ID": "cb4667f2",
-        "CHANNEL_NAME": "Master",
-        "UPDATE_METHOD": "background",
-        "UPDATE_API": "https://api.ionicjs.com",
-        "MAX_STORE": "2",
-        "MIN_BACKGROUND_DURATION": "30"
       }
     },
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
