--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic-native/vibration": "^4.11.0",
     "@ionic/storage": "2.1.3",
+    "angularx-qrcode": "^1.2.4",
+    "cordova-android": "~7.0.0",
     "cordova-android-support-gradle-release": "^1.4.4",
     "cordova-browser": "~5.0.4",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -48,8 +50,7 @@
     "phonegap-plugin-barcodescanner": "^7.0.2",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~7.0.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
