--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/dialogs": "^4.6.0",
     "@ionic-native/email-composer": "^4.12.0",
     "@ionic-native/http": "^4.5.3",
+    "@ionic-native/social-sharing": "^4.14.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic-native/vibration": "^4.11.0",
@@ -43,6 +44,8 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-vibration": "^3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.1",
+    "es6-promise-plugin": "^4.2.2",
     "ionic": "^3.15.0",
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
@@ -75,7 +78,8 @@
       "cordova-plugin-email-composer": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
       "browser",
