--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "AcuStock",
-  "version": "0.0.1alpha",
+  "version": "0.0.2",
+  "versionType": "alpha",
   "author": "Michael Wallace",
   "homepage": "https://wallaceit.com.au/",
   "private": true,
@@ -29,9 +30,10 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic-native/vibration": "^4.11.0",
+    "@ionic/pro": "^2.0.3",
     "@ionic/storage": "2.1.3",
     "angularx-qrcode": "^1.2.4",
-    "cordova-android": "~7.0.0",
+    "cordova-android": "~7.1.1",
     "cordova-android-support-gradle-release": "^1.4.4",
     "cordova-browser": "~5.0.4",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -39,7 +41,7 @@
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic": "~5.2.4",
     "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-vibration": "^3.1.0",
@@ -50,7 +52,6 @@
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
-    "phonegap-plugin-barcodescanner": "^7.0.2",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -66,8 +67,6 @@
     "plugins": {
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "phonegap-plugin-barcodescanner": {},
       "cordova-plugin-dialogs": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-advanced-http": {},
@@ -79,7 +78,19 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "cb4667f2",
+        "CHANNEL_NAME": "Master",
+        "UPDATE_METHOD": "none",
+        "UPDATE_API": "https://api.ionicjs.com",
+        "MAX_STORE": "2",
+        "MIN_BACKGROUND_DURATION": "30"
+      },
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
       "browser",
