Small tweaks, let's call this beta!
- Added preferences key minification for QR code.
- Removed rollback (ionic pro doesn't support it unfortunately).
- Fixed duplicate event subscription.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "AcuStock",
-  "version": "0.0.2",
-  "versionType": "alpha",
+  "version": "1.0.1",
+  "versionType": "beta",
   "author": "Michael Wallace",
   "homepage": "https://wallaceit.com.au/",
   "private": true,
