--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "AcuStock",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "versionType": "beta",
+  "minAcumaticaVersion": "1.0.2",
   "author": "Michael Wallace",
   "homepage": "https://wallaceit.com.au/",
   "private": true,
