--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "AcuStock",
-  "version": "1.2.1",
-  "versionType": "beta",
-  "minAcumaticaVersion": "1.1.1",
+  "version": "1.2.2",
+  "versionType": "stable",
+  "minAcumaticaVersion": "1.2.1",
   "author": "Michael Wallace",
   "homepage": "https://wallaceit.com.au/",
   "private": true,
