--- a/package.json
+++ b/package.json
@@ -77,18 +77,19 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-ionic": {
-        "APP_ID": "cb4667f2",
-        "CHANNEL_NAME": "Production",
-        "UPDATE_METHOD": "none",
-        "UPDATE_API": "https://api.ionicjs.com",
-        "MAX_STORE": "2",
-        "MIN_BACKGROUND_DURATION": "30"
-      },
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "ionic-plugin-videosettings": {},
+      "cordova-plugin-ionic": {
+        "APP_ID": "cb4667f2",
+        "CHANNEL_NAME": "Production",
+        "UPDATE_API": "https://api.ionicjs.com",
+        "UPDATE_METHOD": "background",
+        "MAX_STORE": "2",
+        "MIN_BACKGROUND_DURATION": "30"
+      }
     },
     "platforms": [
       "browser",
