--- a/ionic-plugin-videosettings/plugin.xml
+++ b/ionic-plugin-videosettings/plugin.xml
@@ -20,7 +20,7 @@
 	  <platform name="android">
 	    <config-file target="res/xml/config.xml" parent="/*">
 	      <feature name="AndroidMediaGestureSetting">
-	        <param name="android-package" value="ionic.plugin.videosettings.AndroidMediaGestureSetting" />
+	        <param name="android-package" value="ionic.plugins.videosettings.AndroidMediaGestureSetting" />
             <param name="onload" value="true" />
 	      </feature>
 	    </config-file>
