--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@ionic/pro": "^2.0.3",
     "@ionic/storage": "2.1.3",
     "angularx-qrcode": "^1.2.4",
-    "cordova-android": "~7.1.1",
     "cordova-browser": "~5.0.4",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.1",
@@ -48,17 +47,21 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "es6-promise-plugin": "^4.2.2",
-    "ionic": "^3.15.0",
+    "ionic": "^4.12.0",
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "phonegap-plugin-barcodescanner": "~8.0.0",
+    "cordova-plugin-ionic-keyboard": "~2.1.3",
+    "ionic-plugin-videosettings": "ionic-plugin-videosettings",
+    "cordova-android": "~7.1.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "ionic": "^3.15.0",
+    "ionic": "^4.12.0",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
