--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "zone.js": "0.8.18",
     "phonegap-plugin-barcodescanner": "~8.0.0",
     "cordova-plugin-ionic-keyboard": "~2.1.3",
-    "ionic-plugin-videosettings": "ionic-plugin-videosettings",
+    "ionic-plugin-videosettings": "file:ionic-plugin-videosettings",
     "cordova-android": "~7.1.4"
   },
   "devDependencies": {
