--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/dialogs": "^4.6.0",
     "@ionic-native/email-composer": "^4.12.0",
     "@ionic-native/http": "^4.5.3",
+    "@ionic-native/native-audio": "^4.20.0",
     "@ionic-native/social-sharing": "^4.14.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -34,6 +35,7 @@
     "@ionic/pro": "^2.0.3",
     "@ionic/storage": "2.1.3",
     "angularx-qrcode": "^1.2.4",
+    "cordova-android": "~7.1.4",
     "cordova-browser": "~5.0.4",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.1",
@@ -41,27 +43,25 @@
     "cordova-plugin-email-composer": "^0.8.15",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic": "~5.2.4",
+    "cordova-plugin-ionic-keyboard": "~2.1.3",
     "cordova-plugin-ionic-webview": "^2.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-vibration": "^3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "es6-promise-plugin": "^4.2.2",
-    "ionic": "^4.12.0",
+    "ionic": "^4.10.3",
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "~8.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "phonegap-plugin-barcodescanner": "~8.0.0",
-    "cordova-plugin-ionic-keyboard": "~2.1.3",
-    "ionic-plugin-videosettings": "file:ionic-plugin-videosettings",
-    "cordova-android": "~7.1.4"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
-    "ionic": "^4.12.0",
+    "ionic": "^4.10.3",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
@@ -82,7 +82,6 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "ionic-plugin-videosettings": {},
       "cordova-plugin-ionic": {
         "APP_ID": "cb4667f2",
         "CHANNEL_NAME": "Production",
@@ -90,7 +89,8 @@
         "UPDATE_METHOD": "none",
         "MAX_STORE": "2",
         "MIN_BACKGROUND_DURATION": "30"
-      }
+      },
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "browser",
